@startuml

title __COMPONENT's Class Diagram__\n

  package  {
    package component {
      interface ColourTool {
          {abstract} + toString()
          {abstract} + Code()
          {abstract} + getType()
      }
    }
  }
  

  package  {
    package component {
      enum ToolType {
        PEN
        FILL
      }
    }
  }
  

  package  {
    package component {
      interface DrawComponent {
          {abstract} + toString()
          {abstract} + getType()
      }
    }
  }
  

  package  {
    package component {
      enum Type {
        PLOT
        POLYGON
        LINE
        RECTANGLE
        ECLIPSE
      }
    }
  }
  

  package  {
    package component {
      class Eclipse {
          {static} - type : Type
          + Eclipse()
          + getType()
      }
    }
  }
  

  package  {
    package component {
      class Fill {
          {static} - type : ToolType
          - colour : Color
          + Fill()
          + getType()
          + Code()
          + toString()
      }
    }
  }
  

  package  {
    package component {
      class Line {
          {static} - type : Type
          + Line()
          + getType()
      }
    }
  }
  

  package  {
    package component {
      class Pen {
          {static} - type : ToolType
          - colour : Color
          + Pen()
          + getType()
          + Code()
          + toString()
      }
    }
  }
  

  package  {
    package component {
      class Plot {
          {static} - type : Type
          - point : VectorPoint
          + Plot()
          + getType()
          + toString()
      }
    }
  }
  

  package  {
    package component {
      class Polygon {
          {static} - type : Type
          - pointsList : ArrayList<VectorPoint>
          + Polygon()
          + getType()
          + toString()
      }
    }
  }
  

  package  {
    package component {
      class Rectangle {
          {static} - type : Type
          + Rectangle()
          + getType()
      }
    }
  }
  

  package  {
    package component {
      abstract class Shape {
          - point1 : VectorPoint
          - point2 : VectorPoint
          + Shape()
          + Shape()
          + toString()
      }
    }
  }
  

  ColourTool +-down- ToolType
  DrawComponent +-down- Type
  Eclipse -up-|> Shape
  Fill -up-|> ColourTool
  Line -up-|> Shape
  Pen -up-|> ColourTool
  Plot -up-|> DrawComponent
  Polygon -up-|> DrawComponent
  Rectangle -up-|> Shape
  Shape -up-|> DrawComponent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
